fix: uuid, code structure, create tenant api
